--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -23,3 +23,27 @@
     }
 }
 
+.side-nav
+{
+    
+    color: white;
+}
+
+mat-sidenav-container {
+    height: 100%;
+}
+
+
+
+mat-sidenav {
+    background-color: black;
+    width: 200px;
+    padding: 16px;
+    border-radius: 0;
+}
+
+.sidenav_text 
+{
+    color: white;
+    text-decoration: none;
+}
