--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,15 @@
 
 <mat-sidenav-container class="side-nav">
     <mat-sidenav #sidenav mode="side" [(opened)]="opened">
+      <div>
        <a class="sidenav_text" href="">Kalendarz</a> 
+      </div>
+      <div>
+       <a class="sidenav_text" href="">Notatki</a> 
+      </div>
+      <div>
+        <a class="sidenav_text" href="">CMS</a> 
+       </div>
     </mat-sidenav>
     <mat-sidenav-content> 
 
@@ -17,5 +25,6 @@
       </mat-toolbar>
 
       <h2 style="color: black;">Article title</h2>
+      <router-outlet></router-outlet>
     </mat-sidenav-content>
 </mat-sidenav-container>
