--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,13 +3,13 @@
 <mat-sidenav-container class="side-nav">
     <mat-sidenav #sidenav mode="side" [(opened)]="opened">
       <div>
-       <a class="sidenav_text" href="">Kalendarz</a> 
+       <a class="sidenav_text" routerLink="/calendar">Kalendarz</a> 
       </div>
       <div>
-       <a class="sidenav_text" href="">Notatki</a> 
+       <a class="sidenav_text" routerLink="/notes">Notatki</a> 
       </div>
       <div>
-        <a class="sidenav_text" href="">CMS</a> 
+        <a class="sidenav_text" routerLink="/cms">CMS</a> 
        </div>
     </mat-sidenav>
     <mat-sidenav-content> 
