--- a/src/app/notes/notes.component.html
+++ b/src/app/notes/notes.component.html
@@ -1,1 +1,35 @@
-<p style="color: black;">notes works!</p>
+<div class="form-container">
+    <form [formGroup]="form" (ngSubmit)="onSubmit()" class="form">
+      <mat-form-field appearance="fill">
+        <mat-label>Imię i nazwisko klientki</mat-label>
+        <input matInput formControlName="clientName" required>
+      </mat-form-field>
+      
+      <mat-form-field appearance="fill">
+        <mat-label>Godzina</mat-label>
+        <mat-select formControlName="appointmentTime" required>
+          <mat-option value="8:00">8:00</mat-option>
+          <mat-option value="9:00">9:00</mat-option>
+          <mat-option value="10:00">10:00</mat-option>
+          <mat-option value="11:00">11:00</mat-option>
+          <mat-option value="12:00">12:00</mat-option>
+          <mat-option value="13:00">13:00</mat-option>
+          <mat-option value="14:00">14:00</mat-option>
+          <mat-option value="15:00">15:00</mat-option>
+          <mat-option value="16:00">16:00</mat-option>
+          <mat-option value="17:00">17:00</mat-option>
+          <mat-option value="18:00">18:00</mat-option>
+          <mat-option value="19:00">19:00</mat-option>
+          <mat-option value="20:00">20:00</mat-option>
+        </mat-select>
+      </mat-form-field>
+      
+      <mat-form-field appearance="fill">
+        <mat-label>Uwagi</mat-label>
+        <textarea matInput formControlName="notes"></textarea>
+      </mat-form-field>
+      
+      <button mat-flat-button type="submit">Zatwierdź</button>
+    </form>
+  </div>
+  
