--- a/src/app/notes/notes.component.scss
+++ b/src/app/notes/notes.component.scss
@@ -9,8 +9,11 @@
         display: flex; 
         flex-direction: column;
         
-        button {
-            width: 50%;
-        }
+        
     }
+}
+
+button {
+    width: 50%;
+    margin-top: 10px;
 }
