--- a/src/app/notes/notes.component.scss
+++ b/src/app/notes/notes.component.scss
@@ -83,6 +83,7 @@
     border-radius: 8px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     background-color: #fff;
+    margin-top: 30px;
   }
   
   /* Tytuł formularza */
@@ -180,3 +181,5 @@
     padding: 5px 15px;
     margin-right: 5px;
   }
+
+ 
