--- a/src/app/auth/auth.component.scss
+++ b/src/app/auth/auth.component.scss
@@ -61,6 +61,19 @@ body {
       }
     }
 
+    .btn-secondary
+    {
+      background: $secondary-color;
+      color: #fff;
+      padding: 12px;
+      border: none;
+      border-radius: $border-radius;
+      cursor: pointer;
+      font-size: 16px;
+      transition: $transition;
+      margin: 0 auto 0 5px;
+    }
+
     .btn {
       background: $primary-color;
       color: #fff;
