--- a/src/app/auth/auth.component.html
+++ b/src/app/auth/auth.component.html
@@ -1,64 +1,41 @@
 <div class="row">
   <div class="form-container">
     <form #authForm="ngForm" (ngSubmit)="onSubmit(authForm)">
-        <!-- Pole PIN -->
-        <div class="form-group" *ngIf="!pinIsValid">
-          <label for="pin" class="pin">Aby przejść dalej wpisz PIN</label>
-          <input
-            type="password"  
-            id="pin"
-            name="pin" 
-            class="form-control pin"
-            [(ngModel)]="enteredPin"
-            (ngModelChange)="checkPin()" 
+        <div class="form-group">
+            <label for="email" class="email"></label>
+            <input 
+            type="email" 
+            id="email" 
+            class="form-control email"
+            ngModel
             required
-            minlength="4"
-            maxlength="4"
-            pattern="[0-9]{4}">
+            email>
         </div>
-
-        <!-- Pole Email i Hasło widoczne tylko wtedy, gdy PIN jest poprawny -->
-        <div *ngIf="pinIsValid">
-          <div class="form-group">
-            <label for="email" class="email">Email:</label>
+        <div class="form-group">
+            <label for="password" class="password"></label>
             <input 
-              type="email" 
-              id="email" 
-              class="form-control email"
-              ngModel
-              required
-              email
-              name="email">
-          </div>
-
-          <div class="form-group">
-            <label for="password" class="password">Hasło:</label>
-            <input 
-              type="password" 
-              id="password" 
-              class="form-control password"
-              ngModel
-              required
-              minlength="6"
-              name="password">
-          </div>
-
-          <!-- Przyciski -->
-          <div>
+            type="password" 
+            id="password" 
+            class="form-control password"
+            ngModel
+            required
+            minlength="6">
+        </div>
+        <div>
             <button 
-              class="btn btn-primary"
-              type="submit"
-              [disabled]="!authForm.valid"> <!-- Zablokowany, jeśli formularz jest niepoprawny -->
-              {{isLoginMode ? 'Zaloguj się' : 'Zarejestruj się'}}
+            class="btn btn-primary"
+            type="submit"
+            [disabled]="!authForm.valid">
+            {{isLoginMode ? 'Zaloguj się' : 'Zarejestruj się'}}
             </button>
 
             <button
-              type="button"
-              class="btn-secondary"
-              (click)="onSwitchMode()">
-              Zmień
+            class="btn-secondary"
+            (click)="onSwitchMode()">
+            Zmień
             </button>
-          </div>
+            
+
         </div>
     </form>
   </div>
