--- a/src/app/auth/auth.component.html
+++ b/src/app/auth/auth.component.html
@@ -1,26 +1,29 @@
 <div class="row">
   <div class="form-container">
     <form #authForm="ngForm" (ngSubmit)="onSubmit(authForm)">
-        <div class="form-group">
-            <label for="email" class="email"></label>
-            <input 
-            type="email" 
-            id="email" 
-            class="form-control email"
-            ngModel
-            required
-            email>
-        </div>
-        <div class="form-group">
-            <label for="password" class="password"></label>
-            <input 
-            type="password" 
-            id="password" 
-            class="form-control password"
-            ngModel
-            required
-            minlength="6">
-        </div>
+      <div class="form-group">
+        <label for="email" class="email">Email</label>
+        <input 
+        type="email" 
+        id="email" 
+        name="email"  
+        class="form-control email"
+        ngModel
+        required
+        email>
+    </div>
+    <div class="form-group">
+        <label for="password" class="password">Password</label>
+        <input 
+        type="password" 
+        id="password"
+        name="password" 
+        class="form-control password"
+        ngModel
+        required
+        minlength="6">
+    </div>
+    
         <div>
             <button 
             class="btn btn-primary"
@@ -40,3 +43,5 @@
     </form>
   </div>
 </div>
+
+
