--- a/src/app/auth/auth.component.html
+++ b/src/app/auth/auth.component.html
@@ -8,7 +8,7 @@
     </div>
     <form #authForm="ngForm" (ngSubmit)="onSubmit(authForm)" *ngIf="!isLoading">
       <div class="form-group">
-        <label for="email" class="email">Email</label>
+        <label style="margin-right: 10px;" for="email" class="email">Email</label>
         <input 
         type="email" 
         id="email" 
@@ -19,7 +19,7 @@
         email>
     </div>
     <div class="form-group">
-        <label for="password" class="password">Password</label>
+        <label style="margin-right: 10px;" for="password" class="password">Password</label>
         <input 
         type="password" 
         id="password"
@@ -34,11 +34,13 @@
             <button 
             class="btn btn-primary"
             type="submit"
-            [disabled]="!authForm.valid">
+            [disabled]="!authForm.valid"
+            [class.disabled]="!authForm.valid">
             {{isLoginMode ? 'Zaloguj się' : 'Zarejestruj się'}}
             </button>
 
             <button
+            type="button"
             class="btn-secondary"
             (click)="onSwitchMode()">
             Zmień
